@@ -15,6 +15,8 @@
     <x:expect label="...along with a label" test="//bf:Work[1]/bf:adminMetadata/bf:AdminMetadata/bf:status/bf:Status/rdfs:label = 'corrected or revised'"/>
     <x:expect label="pos 6 should set the rdf:type of the Work" test="//bf:Work[2]/rdf:type/@rdf:resource = 'http://id.loc.gov/ontologies/bibframe/NotatedMusic'"/>
     <x:expect label="pos 6 can also set the rdf:type of the Instance" test="//bf:Instance[2]/rdf:type/@rdf:resource = 'http://id.loc.gov/ontologies/bibframe/Manuscript'"/>
+    <x:expect label="pos 6 should create a content property of the Work" test="//bf:Work[1]/bf:content/bf:Content/@rdf:about = 'http://id.loc.gov/vocabulary/contentTypes/txt'"/>
+    <x:expect label="...unless content is derived by 336" test="//bf:Work[3]/bf:content/bf:Content/@rdf:about = 'http://id.loc.gov/vocabulary/contentTypes/prm'"/>
     <x:expect label="pos 7 should set the issuance of the Instance" test="//bf:Instance[1]/bf:issuance/bf:Issuance/@rdf:about = 'http://id.loc.gov/vocabulary/issuance/mono'"/>
     <x:expect label="pos 7 can also set the rdf:type of the Instance" test="//bf:Instance[3]/rdf:type/@rdf:resource = 'http://id.loc.gov/ontologies/bibframe/Collection'"/>
     <x:expect label="pos 6-7 combination can set the rdf:type of the Instance" test="//bf:Instance[1]/rdf:type/@rdf:resource = 'http://id.loc.gov/ontologies/bibframe/Print'"/>
