@@ -1,5 +1,8 @@
 --- 1.6.0-SNAPSHOT
 
+Update conversion based on updated specifications:
+  ConvSpec-LDR-v1.5
+
 --- 1.5.2 2020/01/30
 
 Generate seriesStatement and seriesEnumeration properties from 8XX fields not matched to 490s (https://github.com/lcnetdev/marc2bibframe2/issues/164)
